# order-guard

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  PRD.md  README.md  README_EN.md  ROADMAP.md  SETUP.md  claude-progress.txt  config.example.yaml  config.yaml  docker-compose.yml  feature_list.json  pyproject.toml  rules.yaml
.claude/: settings.json
.claude/rules/: boundaries.md  git-workflow.md  session-protocol.md  verification.md
alembic/: env.py
alembic/versions/: 0d3a775bcb95_add_connector_type_mcp_server_data_type_.py  7435d0d0770e_initial_tables.py  a1b2c3d4e5f6_add_data_window_to_alert_rules.py  b2c3d4e5f6g7_add_query_logs_table.py  c3d4e5f6g7h8_remove_legacy_fields.py
docs/: database-setup.md  feishu-bot-setup.md
scripts/: create_test_db.py  import_kaggle_production.py  run_long_session.py  seed_mysql_cross_border.py  seed_mysql_erp.py  seed_pg_analytics.py  seed_pg_cross_border.py  sqlite_mcp_server.py
specs/: long-session-report.md
specs/agent-testing-v2/: plan.md
specs/n1-unified-data-access/: eval.md  plan.md
specs/n10-context-tools/: eval.md  (+1 more)
tests/: debug_glm5_coding.py  test_agent.py  test_alert_silence.py  test_alert_tools.py  test_business_context.py  test_context_tools.py  test_data_access.py  test_dbhub.py  test_feishu_bot.py  test_file_handler.py  test_health_tools.py  test_hot_cold.py  test_mcp_client.py  test_mcp_pipeline.py  test_query_audit.py  test_report_tools.py  test_reporter.py  test_rule_tools.py  test_schema.py  test_session_manager.py  test_unified_agent.py  test_usage_tools.py  test_wecom_webhook.py
(+166 files in other folders)
